# BondgraphSimulator

./: .gitignore  bg_dc_motor.py  bg_hoisting_device.py  bg_test.py  bg_transformer.py  bg_two_dof_msd.py  my_test.py  notes.md  pyBG.py  pyproject.toml  requirements.txt  requirements_old.txt  streamlit_flow_test.py
examples/: bg_dc_motor.py  bg_hoisting_device.py  bg_r_l_circuit.py  bg_transformer.py  bg_two_dof_msd.py
pyBondGraph/: __init__.py  bondgraph.py  core.py  elements.py  sensors.py
simscape_reference/: dc_motor_example.slx  hoisting_device.slx  hydraulic_power_gen_onramp.mat  hydraulic_power_gen_onramp.slx  transformer_example.slx  two_dof_example.slx
